k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin-public
spec:
  type: LoadBalancer
  selector:
    app: httpbin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: httpbin-private
spec:
  type: ClusterIP
  selector:
    app: httpbin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
