ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin-ingress
spec:
  rules:
  - host: "public.example.com"
    http:
      paths:
      - path: /get
        pathType: Prefix
        backend:
          service:
            name: httpbin-public
            port:
              number: 80
  - host: "private.example.com"
    http:
      paths:
      - path: /post
        pathType: Prefix
        backend:
          service:
            name: httpbin-private
            port:
              number: 80
